# EyeBlinking

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
cpp/: main.cpp
events/: BlinkDetected.hpp  Dispatcher.hpp  Event.hpp  EventType.hpp
models/: haarcascade_eye.xml
src/: EyeBlinkingDetector.cpp  EyeBlinkingDetector.hpp  main.cpp
src/detection/: CascadeDetector.hpp
src/detection/impl/eyedetection/: EyeDetectorCascade.cpp  EyeDetectorCascade.hpp
src/detection/impl/facedetection/: FaceDetectorCascade.cpp  FaceDetectorCascade.hpp
src/eyeblinking/: DetectionOrchestrator.cpp  DetectionOrchestrator.hpp  EyeBlinkingDetector.cpp  EyeBlinkingDetector.hpp
src/eyeblinking/detection/: CascadeDetector.hpp
src/eyeblinking/detection/cascade/: CascadeDetector.hpp
src/eyeblinking/detection/cascade/impl/eyedetection/: EyeDetectorCascade.cpp  EyeDetectorCascade.hpp
src/eyeblinking/detection/cascade/impl/facedetection/: FaceDetectorCascade.cpp  FaceDetectorCascade.hpp
src/eyeblinking/detection/impl/eyedetection/: EyeDetectorCascade.cpp  EyeDetectorCascade.hpp
src/eyeblinking/detection/impl/facedetection/: FaceDetectorCascade.cpp  FaceDetectorCascade.hpp
src/eyeblinking/detection/landmarks/: LandmarksDetector.hpp
src/eyeblinking/detection/landmarks/impl/eyeblinking/: EyeBlinkingDetector.cpp  EyeBlinkingDetector.hpp
src/eyeblinking/events/: BlinkDetected.cpp  BlinkDetected.hpp  Dispatcher.hpp  Event.hpp  EventTypes.hpp  EyeDetected.cpp  FaceDetected.cpp  FaceDetected.hpp
src/eyeblinking/events/data/: EyeDetected.hpp  FaceDetected.cpp  FaceDetected.hpp
src/eyeblinking/utils/: FixedSizeQueue.hpp
src/facedetection/: FaceDetector.hpp
src/facedetection/impl/: FaceDetectorHOGImpl.hpp
tests/: EventDistpatcherUnitTestSuite.cpp  EventUnitTestSuite.cpp  EyeDetectorCascadeUnitTestSuite.cpp  FaceDetectorCascadeUnitTestSuite.cpp  FixedQueueUnitTestSuite.cpp
tools/: EyeBlinkingDetector.cpp  EyeBlinkingDetector.hpp
